Add basic student page

--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <title>SAP</title>
 </head>
 <body>
     <div id="app"></div>
