--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <title>SAP</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/media/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/media/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/media/icon/favicon-16x16.png">
+    <link rel="manifest" href="/media/icon/manifest.json">
+    <link rel="mask-icon" href="/media/icon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/media/icon/favicon.ico">
+    <meta name="msapplication-config" content="/media/icon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <div id="app"></div>
